--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
          <div class="mt-5">
            <p class="mb-5">For this project, my team and I developed an e-commerce site for Laundr, a Gainesville-based company that offers on-demand laundry services and sells its own laundry bombs. The site was built mainly using React, it showcases their laundry products and is integrated with Stripe API </p>
            <div class="button">
-            <a tabindex="0">View Project</a>
+            <a href="laundr.html" tabindex="0">View Project</a>
             <a tabindex="-1">View Project</a>
            </div>
           </div>
@@ -174,7 +174,7 @@
          <div class="mt-5">
            <p class="mb-5">In this project we designed and developed a website for an NFT collection, it includes a minting button that connects to a MetaMask account. </p>
            <div class="button">
-            <a tabindex="0">View Project</a>
+            <a  tabindex="0">View Project</a>
             <a tabindex="-1">View Project</a>
            </div>
           </div>
